--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,13 @@ body {
 
 section {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* header */
+/* start header */
 header {
     height: 80px;
     background-color: var(--title-color);
@@ -72,10 +75,11 @@ nav {
 
 .logo a {
     color: white;
-    font-weight: bold;
+    font-weight: var(--font-medium);
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
 }
+
 .logo span {
     background-image: var(--first-gradient);
     background-clip: text;
@@ -86,6 +90,12 @@ nav {
     width: 80%;;
     display: flex;
     justify-content: end;
+}
+
+.Links a:hover {
+    background-image: var(--first-gradient);
+    background-clip: text;
+    color: transparent;
 }
 
 nav ul  {
@@ -105,4 +115,75 @@ nav ul a{
     color: var(--text-color);
     cursor: pointer;
 }
-/* Home */
+/* end header */
+/* start Home */
+
+.Home {
+    /* background-color: hsl(0, 0%, 8%); */
+    position: relative;
+    z-index: -1;
+}
+
+.Home::before {
+    content: "";
+    position: absolute;
+}
+
+.Home .cont {
+    /* background-color: red; */
+    display: grid;
+    grid-template-columns: 530px 465px;
+    padding-top: 3.5em;
+    gap: 7.5rem;
+    justify-content: center;
+    align-items: flex-end;
+}
+.Home .cont .image{
+    background: var(--first-gradient) padding-box, 
+    linear-gradient(90deg, hsl(15, 68%, 50%) 0%, hsl(20, 68%, 80%) 100%) border-box;;
+    height: 670px;
+    width: 530px;
+    border-radius: 20em 20em 0 0;
+    border: 10px solid transparent;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    /* justify-content: center; */
+
+}
+.Home .cont img {
+    max-width:100%;
+    height: 390px;
+    margin: auto;
+    margin: 0;
+    transform: translateY(-7px);
+}
+.Home :where(.image) h1 {
+    font-size: 7em;
+    letter-spacing: 10px;
+    color: hsla(0, 0%, 100%, 0.3);
+    font-weight: var(--font-medium);
+    margin: 0;
+}
+
+
+
+.Home .content {
+    background-color: antiquewhite;
+    height: 545px;
+}
+
+.Home .content .title-h3 {
+    margin:0px 0px 0.75em;
+    background: var(--third-gradient);
+    font-size: 1.25rem;
+    background-clip: text;
+    color: transparent;
+}
+
+.Home .content h1 {
+    font-size: var(--bigger-font-size);
+    margin: 0px 0px 2.5rem;
+}
+
+/* end Home */
