Home section is done

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,23 @@ body {
     --z-fixed: 100;
 }
 
+@media screen and (min-width: 1152px) {
+    :root {
+        --bigger-font-size: 4rem;
+        --big-font-size: 3.5rem;
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-big-font-size: 1.125rem;
+        --normal-font-size: 1rem;
+        --small-font-size: 0.875rem;
+        --smaller-font-size: 0.813rem;
+    }
+    .content ul h3 {
+        font-size: 2.75rem;
+    }
+}
+
 section {
     width: 100%;
     min-height: 100vh;
@@ -56,7 +73,7 @@ section {
 /* start header */
 header {
     height: 80px;
-    background-color: var(--title-color);
+    background-color: rgb(8%, 8%, 8%);
     font-size: 16px;
     position: fixed;
     width: 100%;
@@ -119,7 +136,6 @@ nav ul a{
 /* start Home */
 
 .Home {
-    /* background-color: hsl(0, 0%, 8%); */
     position: relative;
     z-index: -1;
 }
@@ -127,10 +143,14 @@ nav ul a{
 .Home::before {
     content: "";
     position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(8%, 8%, 8%);
+    transform: skewY(5deg);
 }
 
 .Home .cont {
-    /* background-color: red; */
     display: grid;
     grid-template-columns: 530px 465px;
     padding-top: 3.5em;
@@ -169,14 +189,18 @@ nav ul a{
 
 
 .Home .content {
-    background-color: antiquewhite;
-    height: 545px;
+    /* height: 545px; */
+    display: flex;
+    flex-flow: column;
+    height: auto;
+    row-gap: 4.5rem;
+    padding-bottom: 5rem;
 }
 
 .Home .content .title-h3 {
     margin:0px 0px 0.75em;
     background: var(--third-gradient);
-    font-size: 1.25rem;
+    font-size: var(--h3-font-size);
     background-clip: text;
     color: transparent;
 }
@@ -184,6 +208,59 @@ nav ul a{
 .Home .content h1 {
     font-size: var(--bigger-font-size);
     margin: 0px 0px 2.5rem;
+    color: white;
+    font-weight: var(--font-medium);
+}
+
+.buttons {
+    display:flex;
+    column-gap: 2.5rem;
+}
+.buttons .button{
+    padding: 10px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    background: var(--third-gradient);
+    color: var(--white-color);
+    border-radius: 4rem;
+    padding: 0.75rem 1.8rem;
+}
+
+.button-watch {
+    border: none;
+    background-color: transparent;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+}
+.button-watch i {
+    font-size: 2rem;
+}
+
+.content ul {
+    display: flex;
+    gap: 4rem;
+}
+
+.content ul h3 {
+    color: var(--white-color);
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-medium);
+    font-family: var(--second-font);
+    margin-bottom: 0.5rem;
+}
+
+.content ul span {
+    background: var(--third-gradient);
+    background-clip: text;
+    color: transparent;
+}
+
+.content ul p {
+    color: var(--text-color);
+    font-size: var(--normal-font-size);
+    line-height: 1.6;
 }
 
 /* end Home */
