--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: "Poppins",sans-serif;
+    background-color: var(--body-color);
 }
 
 html {
@@ -15,7 +16,11 @@ html {
 /* comp */
 
 .cont {
-    width: 1152px;
+    display: flex;
+    width: 1120px;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 
 :root {
@@ -78,6 +83,32 @@ h1, h2, h3, h4 {
     font-weight: var(--font-semi-bold);
 }
 
+li {
+    list-style: none;
+}
+
+:where(.Popular,.Choose) :where(.title,.content) :where(h2) {
+    font-size: var(--big-font-size);
+    margin-bottom: 24px;
+} 
+
+:where(.Popular,.Choose) :where(.title,.content) p {
+    font-size: var(--normal-font-size);
+    color: var(--text-color);
+}
+
+.box-shadow {
+    position: absolute;
+    bottom: -2rem;
+    width: 425px;
+    height: 60px;
+    background-color: black;
+    background: hsla(15, 60%, 52%, 0.6);
+    z-index: -10;
+    filter: blur(28px);
+}
+
+
 /* start header */
 header {
     height: 80px;
@@ -93,9 +124,14 @@ header {
 nav {
     margin: auto;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 100%;
+    z-index: 1000;
+}
+
+nav.cont {
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .logo a {
@@ -146,6 +182,8 @@ nav ul a{
 .Home {
     position: relative;
     z-index: -1;
+    padding: 0px 0px 50px 0px;
+    margin-bottom: 20px;
 }
 
 .Home::before {
@@ -166,7 +204,7 @@ nav ul a{
     justify-content: center;
     align-items: flex-end;
 }
-.Home .cont .image{
+:where(.Home,.Choose) :where(.cont,.product) .image{
     background: var(--first-gradient) padding-box, 
     linear-gradient(90deg, hsl(15, 68%, 50%) 0%, hsl(20, 68%, 80%) 100%) border-box;;
     height: 670px;
@@ -176,19 +214,18 @@ nav ul a{
     display: flex;
     flex-flow: column;
     align-items: center;
-    /* justify-content: center; */
-
+    position: relative;    
 }
-.Home .cont img {
+:where(.Home,.Choose) :where(.cont,.product) img {
     max-width:100%;
     height: 390px;
     margin: auto;
     margin: 0;
     transform: translateY(-10px);
 }
-.Home :where(.image) h1 {
+:where(.Home,.Choose) :where(.image) h1 {
     font-size: 7em;
-    letter-spacing: 10px;
+    letter-spacing: 6px;
     color: hsla(0, 0%, 100%, 0.3);
     font-weight: var(--font-medium);
     margin: 0;
@@ -196,9 +233,7 @@ nav ul a{
 }
 
 
-
 .Home .content {
-    /* height: 545px; */
     display: flex;
     flex-flow: column;
     height: auto;
@@ -273,3 +308,227 @@ nav ul a{
 }
 
 /* end Home */
+/* start Popular */
+.Popular {
+    display: flex;
+    flex-flow: column;
+    padding: 112px 0px 32px ;
+    background-color: inherit;
+    z-index: -5;
+}
+
+.Popular .cont {
+    overflow: hidden;
+}
+
+.Popular .title {
+    align-self: flex-start;
+}
+
+.Popular .product{
+    padding-block: 4rem 8rem;
+    margin: 0px 28px;
+    width: 1064px;
+} 
+
+.Popular .product-list {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 50px;
+    row-gap: 20px;
+    width: 100vw;
+}
+
+.Popular .product-list .item {
+    width: 230px;
+    height: 410px;
+    background-color: var(--container-color);
+    border-radius: 9em 9em 0 0;
+    padding: 1rem 1rem 1.5rem;
+    margin-inline: 1rem;
+}
+
+.Popular div.image {
+    height: 240px;
+    margin-bottom: 1rem;
+    border-radius: 8em 8em 0 0;
+    background-color: var(--body-color);
+    display: flex;
+    justify-content: center;
+}
+
+.Popular .product-list img {
+    width: 150px;
+    height: 210px;
+}
+
+.Popular .item h3 {
+    margin-bottom: 4px;
+} 
+
+.Popular .item p {
+    margin-bottom: 24px;
+}
+
+.Popular .item .prace {
+    display: flex;
+    justify-content: space-between;
+    font-family: var(--second-font);
+    font-size: var(--h1-font-size);
+    align-items: center;
+}
+
+.Popular .prace span {
+    color: var(--first-color-alt);
+}
+
+.Popular .item button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer ;
+    border: none;
+    color: white;
+    background: var(--third-gradient);
+    font-family: 'remixicon' !important;
+    border-radius: 0.75rem;     
+    box-shadow: rgba(137, 54, 26, 0.4) 0px 2px 8px;
+    padding: 0.25rem;
+    width: 36px;
+    height: 39px;
+    font-weight: normal;
+    font-size: 1.4rem;
+}
+
+
+.Popular .switch {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.Popular .switch .to-left,
+.Popular .switch .to-right{
+    border: none;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    background-color: white; 
+    box-shadow: 5px 5px 10px gray;
+}
+
+.Popular .switch .to-left i,
+.Popular .switch .to-right i{
+    background: var(--third-gradient);
+    background-clip: text;
+    color: transparent;
+}
+
+
+.Popular .switch li {
+    list-style: none;
+    width: 10px;
+    height: 10px;
+    border: 2px solid black;
+    border-radius: 50%;
+}
+
+/* end Popular */
+/* start Choose */
+
+.Choose .cont {
+    width: 1120px;
+}
+
+
+.Choose .product {
+    display: grid;
+    grid-template-columns: 500px 455px;
+    column-gap: 7rem;
+    padding: 112px 0px 32px 0px;
+    z-index: -1;
+}
+
+
+.Choose .product-2 {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.Choose div.image {
+    width: 500px;
+    z-index: -5;
+    position: relative;
+}
+
+.Choose  h1{
+    font-size: 3.5rem;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    position: absolute;
+    bottom: 60px;
+    left: 10px;
+    font-family: var(--second-font);
+    font-weight: var(--font-medium);
+}
+
+.Choose .product-2 h1 {
+    font-size: 7rem;
+    transform: rotate(0deg);
+    z-index: -1;
+    right: 10px;
+}
+
+.Choose .product img {
+    position: relative;
+    /* background-color: teal; */
+} 
+
+.Choose .img1{
+    width: 350px;
+    height: 510px;
+}
+
+.Choose .img2 {
+    width: 420px;
+    height: 510px;
+}
+
+.Choose .product-1 .content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+    justify-content: flex-end;
+}
+
+.Choose .product-1 ul {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+    margin-bottom: 32px;
+}
+
+.Choose .product-1 li {
+    display: flex;
+    align-items: center;
+    column-gap: 1.5rem;
+    font-size: var(--h2-font-size);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.Choose .product-1 span {
+    background:var(--third-gradient) ;
+    padding: .30rem;
+    color: white;
+    border-radius: 0.75rem;
+}
+
+
+
+
+
+
+
+/* end Choose */
