--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: "Poppins",sans-serif;
     background-color: var(--body-color);
+    z-index: -1000;
 }
 
 html {
@@ -87,12 +88,12 @@ li {
     list-style: none;
 }
 
-:where(.Popular,.Choose) :where(.title,.content) :where(h2) {
+:where(.Popular,.Choose , .Products,.joinUs) :where(.title,.content) :where(h2) {
     font-size: var(--big-font-size);
     margin-bottom: 24px;
 } 
 
-:where(.Popular,.Choose) :where(.title,.content) p {
+:where(.Popular,.Choose ,.Products,.joinUs) :where(.title,.content) p {
     font-size: var(--normal-font-size);
     color: var(--text-color);
 }
@@ -104,7 +105,6 @@ li {
     height: 60px;
     background-color: black;
     background: hsla(15, 60%, 52%, 0.6);
-    z-index: -10;
     filter: blur(28px);
 }
 
@@ -204,7 +204,7 @@ nav ul a{
     justify-content: center;
     align-items: flex-end;
 }
-:where(.Home,.Choose) :where(.cont,.product) .image{
+:where(.Home,.Choose,.joinUs) :where(.cont,.product) .image{
     background: var(--first-gradient) padding-box, 
     linear-gradient(90deg, hsl(15, 68%, 50%) 0%, hsl(20, 68%, 80%) 100%) border-box;;
     height: 670px;
@@ -216,14 +216,13 @@ nav ul a{
     align-items: center;
     position: relative;    
 }
-:where(.Home,.Choose) :where(.cont,.product) img {
-    max-width:100%;
+:where(.Home,.Choose,.joinUs) :where(.cont,.product) img {
     height: 390px;
     margin: auto;
     margin: 0;
     transform: translateY(-10px);
 }
-:where(.Home,.Choose) :where(.image) h1 {
+:where(.Home,.Choose,.joinUs) :where(.image) h1 {
     font-size: 7em;
     letter-spacing: 6px;
     color: hsla(0, 0%, 100%, 0.3);
@@ -314,7 +313,7 @@ nav ul a{
     flex-flow: column;
     padding: 112px 0px 32px ;
     background-color: inherit;
-    z-index: -5;
+    z-index: -2;
 }
 
 .Popular .cont {
@@ -339,7 +338,7 @@ nav ul a{
     width: 100vw;
 }
 
-.Popular .product-list .item {
+:where(.Popular,.Products) .product-list .item {
     width: 230px;
     height: 410px;
     background-color: var(--container-color);
@@ -348,7 +347,7 @@ nav ul a{
     margin-inline: 1rem;
 }
 
-.Popular div.image {
+:where(.Popular,.Products) div.image {
     height: 240px;
     margin-bottom: 1rem;
     border-radius: 8em 8em 0 0;
@@ -357,20 +356,20 @@ nav ul a{
     justify-content: center;
 }
 
-.Popular .product-list img {
+:where(.Popular,.Products) img {
     width: 150px;
     height: 210px;
 }
 
-.Popular .item h3 {
+:where(.Popular,.Products) .item h3 {
     margin-bottom: 4px;
 } 
 
-.Popular .item p {
+:where(.Popular,.Products) .item p {
     margin-bottom: 24px;
 }
 
-.Popular .item .prace {
+:where(.Popular,.Products) .item .prace {
     display: flex;
     justify-content: space-between;
     font-family: var(--second-font);
@@ -378,11 +377,11 @@ nav ul a{
     align-items: center;
 }
 
-.Popular .prace span {
+:where(.Popular,.Products) .prace span {
     color: var(--first-color-alt);
 }
 
-.Popular .item button {
+:where(.Popular,.Products) .item button {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -416,6 +415,7 @@ nav ul a{
     height: 32px;
     background-color: white; 
     box-shadow: 5px 5px 10px gray;
+    cursor: pointer;
 }
 
 .Popular .switch .to-left i,
@@ -441,15 +441,16 @@ nav ul a{
     width: 1120px;
 }
 
+.Choose {
+    z-index: -1;
+}
 
 .Choose .product {
     display: grid;
     grid-template-columns: 500px 455px;
     column-gap: 7rem;
     padding: 112px 0px 32px 0px;
-    z-index: -1;
 }
-
 
 .Choose .product-2 {
     display: flex;
@@ -458,7 +459,7 @@ nav ul a{
 
 .Choose div.image {
     width: 500px;
-    z-index: -5;
+    z-index: -2;
     position: relative;
 }
 
@@ -526,9 +527,254 @@ nav ul a{
 }
 
 
+.Choose .product-2 .content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3.5rem;
+    justify-content: center;
+}
 
+.Choose .product-2 ul {
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    gap: 2rem;
+}
 
+.Choose .product-2 li{
+    padding: 3rem 2rem;
+    background: linear-gradient(rgba(219, 219, 219, 0), rgb(255, 255, 255));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    text-align: center;
+    transition: 0.3s ;
+}
 
-
+.Choose .product-2 li:hover{
+    background: var(--third-gradient);
+    color: transparent;
+    background-clip: text;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 12px 16px;
+    transform: scale(1.020);
+}
 
 /* end Choose */
+/* start Products */
+
+.Products {
+    padding: 112px 0px 32px 0px;
+    z-index: -2;
+}
+
+
+.Products .title {
+    text-align: center;
+}
+
+.Products .cont {
+    row-gap: 4.5rem;
+}
+
+.Products .content {
+    display: grid;
+    grid-template-columns: repeat(4, 230px);
+    gap: 4rem 3rem;
+}
+
+.Products .item {
+    padding: 1rem 1rem 1.5rem;
+    background-color: white; 
+    border-radius: 9em 9em 0 0;
+    transition: 0.3s;
+}
+
+.Products .item:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 12px 16px;
+}
+
+
+.Products .item h3.name {
+    font-size: var(--h3-font-size);
+}
+
+/* end Products */
+/* start joinUs*/
+.joinUs {
+    padding: 112px 0px 32px 0px;
+    z-index: -2;
+}
+
+.joinUs .cont {
+    color: rgb(255, 255, 255);
+    padding-block: 9rem 5rem;
+}
+
+.joinUs .join-cont {
+    display:grid;
+    grid-template-columns: 450px 380px;
+    column-gap: 6rem;
+    height: 442px;
+    padding-inline: 6rem;
+    justify-self: initial;
+    background-color: white;
+    z-index: -3;
+    justify-content: center;
+    align-items: center;
+}
+
+.joinUs .contact {
+    display: grid;
+    row-gap: 3rem;
+    padding-bottom: 5rem;
+}
+
+.joinUs .image {
+    z-index: -1;
+    width: 450px;
+    height: 580px;
+    transform: translateY(-60px);
+    background: var(--second-gradient) padding-box, 
+    linear-gradient(90deg, hsla(15, 68%, 50%, 0.87) 0%, hsl(20, 68%, 80%) 100%) border-box;;
+}
+
+.joinUs .form {
+    display: grid;
+    padding-left: 1.5rem;
+    column-gap: .5rem;
+    background-color: var(--body-color);
+    border-radius: 4rem;
+    grid-template-columns: 1fr max-content;
+    width: 400px;
+    position: relative;
+}
+
+.joinUs .form input {
+    border: none;
+    outline: none;
+    background-color: var(--body-color);
+    padding: 16px 0px;
+    font-size: var(--normal-font-size);
+    margin-right: 16px;
+    
+}
+.joinUs .form button {
+    border: none;
+    background: var(--third-gradient);
+    color: white;
+    padding: 0.75rem 1.8rem;
+    font-size: var(--normal-font-size);
+    cursor: pointer;
+    font-family: var(--second-font);
+    font-weight: var(--font-medium);
+    transform: translateX(-90px);
+    right: 0;
+}
+
+.joinUs .form * {
+    border-radius: 4rem;
+}
+
+.joinUs img {
+    width: 360px;
+    height: 400px;
+}
+
+/* end joinUs */
+/* start footer */
+footer {
+    padding-block: 3rem;
+}
+
+footer .cont {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 1.5rem;
+    margin: auto;
+}
+
+footer .footer-contact {
+    display: grid;
+    grid-template-columns: 250px max-content;
+    justify-content: space-between;
+    column-gap: 4rem;
+    align-items: center;
+}
+
+footer .footer-links {
+    display: grid;
+    grid-template-columns: repeat(4,max-content);
+    column-gap: 4.5rem;
+}
+
+.footer-links h3 {
+    text-transform: capitalize;
+}
+
+footer h3 {
+    margin-bottom: 1.5rem;
+}
+
+footer p {
+    font-size: var(--normal-font-size);
+    color: var(--text-color);
+    line-height: 1.6;
+}
+
+footer ul {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+footer ul a {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: var(--normal-font-size);
+    transition: all 0.3s;
+}
+
+footer ul a:hover {
+    color: black;
+}
+
+
+
+footer .follow-icons .icons {
+    display: flex;
+    gap: 1.5rem;
+    font-size: var(--h3-font-size);
+    transition: 0.8s;
+}
+
+footer .follow-icons a {
+    color: transparent;
+}
+
+footer .follow-icons .icons i {
+    background: var(--third-gradient);
+    background-clip: text;
+    transition: 0.3s;
+}
+
+footer .follow-icons .icons i:hover {
+    cursor: pointer;
+    transform: translateY(-8px);
+}
+
+footer .copyRight {
+    display: flex;
+    justify-content: space-between;
+    color: var(--text-color);
+    font-size: var(--small-font-size);
+    margin-top: 6.5rem;
+}
+
+footer .copyRight div {
+    display: flex;
+    gap: 1.5rem;
+}
+
+/* ent footer */
